--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,7 +4,7 @@
 
 
 // -- Logo colors
-$dark-grey: #747570 !default;
+$dark-grey: #cccccc !default;
 $dark-garnet: #751650 !default;
 $dark-purple: #665f9e;
 $black: #000000;
