--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,7 +5,8 @@
 .section-menu {
     display: flex;
     flex-direction: column;
-
+    align-items: center;
+    justify-content: center;
     h1 {
         text-align: center;
     }
@@ -14,6 +15,7 @@
         display: flex;
         flex-direction: column;
         gap: 2vh;
+        width: 25vw;
     }
 
     button {
