some styles added to app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="custom-container">
   <mat-card class="gameboy-card">
     <mat-card-content>
       <div class="card square card-desk">
         <router-outlet></router-outlet>
         <div class="img-card">
-          <img mat-card-image src="../assets/img/gameboyColor.png">
+          <img mat-card-image src="../assets/img/pokeDuelLogoBlackWhite.png">
         </div>
       </div>
     </mat-card-content>
