--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -136,7 +136,7 @@
             //border-bottom: 2px solid $pad-but-shadow;
             //box-shadow: -1px 1px 5px $black, 0px 0px 5px $black inset;
             //text-shadow: 0px -1px 1px $pad-but-shadow;
-            color: black;
+            color: white;
             text-align: center;
             -webkit-user-select: none; //for chrome
             cursor: pointer;
