--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,12 +34,15 @@
 }
 
 @include media-breakpoint-up(xl) {
-    .container {
+    .custom-container {
+        position: absolute;
         display: flex;
-        flex-direction: row;
-        width: 100vw;
+        justify-content: center;
+        align-items: center;
 
         .gameboy-card {
+                /* width: 100vw; */
+            height: 100vh;
             background-color: $body-bg-md-up;
             margin-top: 9% !important;
 
