continue-game with messages

--- a/src/app/components/my-account/my-account.component.html
+++ b/src/app/components/my-account/my-account.component.html
@@ -11,7 +11,7 @@
       </p>
       <p class="card-text">
         <img src="../../../assets/img/trofeo.png" class="card-img-top" alt="Avatar" style="width:50px;">
-        <span> {{ userStat.score }} points: </span>
+        <span> {{ score }} points: </span>
         <span>{{ userStat.victories }} victories</span>
         <span> in {{ userStat.round }} rounds</span>
       </p>
@@ -24,4 +24,4 @@
   </div>
 </div>
 
-<!-- FIXME: POINTS (ROUND)-->
+<!--FIXME: rounds -->
