changes in interface of mobile

--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -17,8 +17,8 @@
         background-color: $dark-grey;
         border: solid black 10px;
         border-radius: 5px;
-        border-top: solid black 5vh;
-        border-bottom: solid black 9vh;
+        border-top: solid black 3vh;
+        border-bottom: solid black 4vh;
     }
 }
 
@@ -134,18 +134,21 @@
             line-height: 40px;
             border-radius: 50%;
             border-bottom: 2px solid $pad-but-shadow;
-            box-shadow: -1px 1px 5px $black, 0px 0px 5px $black inset;
-            text-shadow: 0px -1px 1px $pad-but-shadow;
-            color: #2c313e;
+            color: white;
             text-align: center;
             -webkit-user-select: none;
             cursor: pointer;
-            transition: box-shadow 0.1s ease-out, border 0.1s ease-out, line-height 0.2s ease-out;
+            transition: all 0.1s ease;
+            transform: translateY(0);
+            // transition: box-shadow 0.1s ease-out, border 0.1s ease-out, line-height 0.2s ease-out;
 
-            &:active {
-                box-shadow: -1px 1px 1px $black, 0px 0px 5px $black inset;
-                border-width: 0px;
-                line-height: 45px;
+            // &:active {
+            //     box-shadow: -1px 1px 1px $black, 0px 0px 5px $black inset;
+            //     border-width: 0px;
+            //     line-height: 45px;
+            // }
+            &:active{
+                transform: translateY(2px);
             }
         }
     }
@@ -173,15 +176,16 @@
             width: 30px;
             height: 10px;
             margin-bottom: 5px;
-            border-radius: 40%;
-            background: linear-gradient(to bottom, $grad-grey-3 0%, $grad-grey-3 30%, $grad-grey-4 70%, $grad-grey-4 100%);
-            background-repeat: no-repeat;
-            border: 2px solid #0b0a1c;
+            border-radius: 15px;
+            background: black;
             cursor: pointer;
+            transition: all 0.2s ease;
+            transform: translateY(0);
         }
 
-        &:active::before {
-            background: linear-gradient(to bottom, $grad-grey-3 0%, $grad-grey-3 50%, $grad-grey-4 100%);
+        &:active::before{
+            background: #484848;
+            transform: translateY(2px);
         }
     }
 }
@@ -224,10 +228,12 @@
 @include media-breakpoint-down(lg) {
     .inside-frame {
         position: absolute;
-        margin: 5vh;
+        top: 1vh;
         width: 360px;
         height: 360px;
         z-index: 3;
+        display: flex;
+        justify-content: center;
     }
 
     .a,
