--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -47,6 +47,7 @@
         height: 20px;
     }
 
+    // TODO: BORDER COLOR 2PX
     border-color: black;
     border-style: solid;
     background-color: $bg-but-pad;
