--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container inside-frame">
     <section class="section-menu">
         <div class="img-card">
-            <img mat-card-image src="../assets/img/pokeDuelLogo.png">
+            <img mat-card-image src="../../../assets/img/pokeDuelOnlyLogo.png">
         </div>
         <div class="menu">
             <button mat-raised-button routerLink="/login">Log In</button>
