--- a/src/app/components/menu-game/menu-game.component.scss
+++ b/src/app/components/menu-game/menu-game.component.scss
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    align-items: center;
 
     h1 {
         text-align: center;
@@ -15,6 +16,7 @@
         display: flex;
         flex-direction: column;
         gap: 8px;
+        width: 50%;
     }
 
     button {
