--- a/src/app/components/continue-game/continue-game.component.scss
+++ b/src/app/components/continue-game/continue-game.component.scss
@@ -54,6 +54,7 @@
 .attack-buttons{
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: rgb(255, 255, 255, 0.5);
     border-radius: 1vh;
     width: 120px;
