--- a/src/app/components/menu-game/menu-game.component.scss
+++ b/src/app/components/menu-game/menu-game.component.scss
@@ -34,7 +34,7 @@
         .mat-card-image {
             width: 100px;
             height: 100px;
-            margin: 30px;
+            margin: 0px 0px 30px 0px;
         }
     }
 
@@ -47,10 +47,25 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
+            align-items: center;
 
             button {
-                height: 30px;
+                width: 55%;
+                height: 35px;
                 border-radius: 1vh;
+                background: $white;
+                color: $black;
+                transform: translateY(0);
+                transition: all 0.2s ease;
+                border: 2px solid transparent;
+
+                &:hover{
+                    background: rgb(235, 235, 235);
+                    border: 2px solid $white
+                }
+                &:active{
+                    transform: translateY(2px);
+                }
             }
         }
     }
