new branch trying the responsive

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -44,3 +44,6 @@ $grad-grey-2: #333;
 // Start-Select buttons
 $grad-grey-3: #0b0a1c;
 $grad-grey-4: #62636c;
+
+//TYPOGRAPHY
+$typo-pokemon: 'Pokemon Solid', sans-serif;
