--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,12 +4,6 @@
 @import "../interface";
 
 .container {
-    // width: 400px;
-    // height: 100%;
-    // width: 100%;
-    // padding: 0;
-    // margin: 0;
-
     .gameboy-card {
         height: 100%;
         width: 100%;
@@ -32,7 +26,7 @@
     }
 }
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
     .container {
         height: 100%;
         width: 100%;
