--- a/src/_interface.scss
+++ b/src/_interface.scss
@@ -2,7 +2,7 @@
 @import "variables";
 
 .container {
-    height: 100%;
+    height: 100vh;
 }
 
 .square {
@@ -147,9 +147,14 @@
     }
 }
 
+.mat-card-actions{
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+
+
 .start-select {
     width: 100%;
-    height: 60px;
+    height: 0;
     display: flex;
     justify-content: center;
 
@@ -181,6 +186,8 @@
             transform: translateY(2px);
         }
     }
+}
+
 }
 
 @include media-breakpoint-up(md) {
@@ -218,8 +225,8 @@
 
 @include media-breakpoint-down(sm) {
     html, body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     }
@@ -232,8 +239,7 @@
         z-index: 3;
     }
 
-    .a,
-    .b {
+    .a, .b {
         background-color: $dark-garnet;
         color: white;
     }
