--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,8 +5,8 @@
 
 .container {
     .gameboy-card {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         padding: 0 !important;
         background-color: $body-bg-md-down;
 
@@ -28,8 +28,6 @@
 
 @include media-breakpoint-down(sm) {
     .container {
-        height: 100%;
-        width: 100%;
         padding: 0;
         margin: 0;
     }
