--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,7 +37,7 @@
     .container {
         display: flex;
         flex-direction: row;
-        width: 100vw;
+        // width: 100vw;
 
         .gameboy-card {
             background-color: $body-bg-md-up;
