--- a/src/app/components/menu-game/menu-game.component.scss
+++ b/src/app/components/menu-game/menu-game.component.scss
@@ -37,12 +37,10 @@
             margin: 30px;
         }
     }
-
 }
 
-@include media-breakpoint-up(md) {
+@media (min-width: 800px) {
     .section-menu {
-
         .menu {
             display: flex;
             flex-direction: column;
