--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,14 +26,14 @@
     }
 }
 
-@include media-breakpoint-down(sm) {
+@media (max-width: 799px) {
     .container {
         padding: 0;
         margin: 0;
     }
 }
 
-@include media-breakpoint-up(md) {
+@media (min-width: 800px) {
     .container {
         display: flex;
         flex-direction: row;
