--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -89,7 +89,7 @@
     text-transform: uppercase;
 }
 
-@include media-breakpoint-up(md) {
+@media (min-width: 800px) {
     .card-img {
         width: 30% !important;
     }
@@ -114,7 +114,7 @@
 
 }
 
-@include media-breakpoint-down(sm) {
+@media (max-width: 799px) {
     .background-battle {
         background-image: url('../../../assets/img/bg-battle.png');
         background-size: cover;
