styles and continue-game compo

--- a/src/app/components/continue-game/continue-game.component.scss
+++ b/src/app/components/continue-game/continue-game.component.scss
@@ -24,81 +24,81 @@
     justify-content: space-between;
 }
 
-.card-img {
-    width: 60% !important;
+.card-img-left {
+    width: 70% !important;
 }
 
-.example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    min-width: 120px;
+.card-img-right {
+    width: 50% !important;
 }
 
-.example-button-row .mat-button-base {
+.mat-button-base {
     margin: 8px 8px 8px 0;
 }
 
-.example-flex-container {
+.attack-buttons {
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.example-button-container {
-    display: flex;
-    justify-content: center;
-    width: 120px;
-}
-
-.attack-buttons{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-evenly;
     background-color: rgb(255, 255, 255, 0.5);
-    border-radius: 1vh;
-    width: 120px;
+    padding: 10px 0px 10px 0px;
+    img {
+        width: 25px;
+    }
 }
 
-.pokemon-name{
-    background-color: $black;
+//FIXME: refactorize code
+.pokemon-name-right {
+    text-align: end;
+    text-shadow: 1px 0 0 $black, -1px 0 0 $black, 0 1px 0 $black,
+        0 -1px 0 $black, 1px 1px $black, -1px -1px 0 $black,
+        1px -1px 0 $black, -1px 1px 0 $black;
     border-radius: 1vh;
     width: 20vh;
     color: $white;
-    text-align: center;
     text-transform: uppercase;
 }
 
+.pokemon-name-left {
+    text-align: start;
+    text-shadow: 1px 0 0 $black, -1px 0 0 $black, 0 1px 0 $black,
+        0 -1px 0 $black, 1px 1px $black, -1px -1px 0 $black,
+        1px -1px 0 $black, -1px 1px 0 $black;
+    border-radius: 1vh;
+    width: 20vh;
+    color: $white;
+    text-transform: uppercase;
+}
 
-
-@include media-breakpoint-up(xl) {
+@media (min-width: 800px) {
     .card-img {
-        width:30% !important;
+        width: 30% !important;
     }
 
     .pokemon-left {
         height: 60%;
     }
 
-    .attack-buttons{
+    .attack-buttons {
         display: flex;
         align-self: start;
     }
 
-    .pokeR-height{
+    .pokeR-height {
         margin-bottom: 110px !important;
     }
 
-    .background-battle{
-        background-image:url('../../../assets/img/background-xl-battle.jpg'); 
+    .background-battle {
+        background-image: url('../../../assets/img/background-xl-battle.jpg');
         background-size: cover;
     }
-    
 }
 
-@include media-breakpoint-down(lg){
-    .background-battle{
-        background-image:url('../../../assets/img/bg-battle.png'); 
+@media (max-width: 799px) {
+    .background-battle {
+        background-image: url('../../../assets/img/bg-battle.png');
         background-size: cover;
+        height: 92%;
+        width: 96%;
+        margin-left: 1.5vw;
     }
 }
