--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -32,27 +32,8 @@
     width: 50% !important;
 }
 
-.example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    min-width: 120px;
-}
-
-.example-button-row .mat-button-base {
+.mat-button-base {
     margin: 8px 8px 8px 0;
-}
-
-.example-flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.example-button-container {
-    display: flex;
-    justify-content: center;
-    width: 120px;
 }
 
 .attack-buttons {
