--- a/src/app/components/options/options.component.scss
+++ b/src/app/components/options/options.component.scss
@@ -8,7 +8,7 @@ $secondary: $secondary;
 
 .mat-slider-thumb-container {
     .mat-slider-thumb {
-        background-color: blue !important;
+        background-color: blue !important; //TODO: FIX DE COLOR
     }
 }
 
