--- a/src/app/components/edit-user/edit-user.component.scss
+++ b/src/app/components/edit-user/edit-user.component.scss
@@ -1,27 +1,28 @@
-@import '../../../variables';
-@import '../../../mixins';
-@import "../../../../node_modules/bootstrap/scss/bootstrap";
+@import '../../../forms'
+// @import '../../../variables';
+// @import '../../../mixins';
+// @import "../../../../node_modules/bootstrap/scss/bootstrap";
 
-.mat-stepper-vertical {
-    background-color: transparent !important;
-}
+// .mat-stepper-vertical {
+//     background-color: transparent !important;
+// }
 
-.card{
-    max-height: 360px;
-    max-width: 360px;
-    background: transparent;
-    border: none;
-}
+// .card{
+//     max-height: 360px;
+//     max-width: 360px;
+//     background: transparent;
+//     border: none;
+// }
 
-.inputs-lg{
-    display: flex;
-    justify-content: center;
-    align-self: center;
-}
+// .inputs-lg{
+//     display: flex;
+//     justify-content: center;
+//     align-self: center;
+// }
 
-@include media-breakpoint-up(xl) {
-    .card{
-        height: 100%;
-        width: 100%;
-    }      
-}
+// @include media-breakpoint-up(xl) {
+//     .card{
+//         height: 100%;
+//         width: 100%;
+//     }      
+// }
