--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,8 @@
     <div class="row" style="height:100%;">
         <div class="col mx-auto inputs-lg">
             <div class="card">
-                <div class="card-body d-flex flex-column">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <h3>Sign in to the site</h3>
                     <form [formGroup]="logInForm">
                         <div class="form-group">
                             <input type="text" formControlName="username" name="username" class="form-control"
