--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,38 +1,44 @@
-@import '../../../variables';
-@import '../../../mixins';
-@import "../../../../node_modules/bootstrap/scss/bootstrap";
+@import '../../../forms'
+// @import '../../../variables';
+// @import '../../../mixins';
+// @import "../../../../node_modules/bootstrap/scss/bootstrap";
 
-.mat-stepper-vertical {
-    background-color: transparent !important;
-}
+// .mat-stepper-vertical {
+//     background-color: transparent !important;
+// }
 
-.card{
-    max-height: 360px;
-    max-width: 360px;
-    background: transparent;
-    border: none;
-}
+// .card{
+//     max-height: 360px;
+//     max-width: 360px;
+//     background: rgb(221, 221, 221);
+//     box-shadow: rgb(0 0 0 / 37%) 15px 23px 46px 1px;
+//     border: none;
+// }
 
-.inputs-lg{
-    display: flex;
-    justify-content: center;
-    align-self: center;
-}
+// .inputs-lg{
+//     display: flex;
+//     justify-content: center;
+//     align-self: center;
+// }
 
-input .mat-input-element {
-    height: 50px;
-    width: 250px;
-}
+// .form-control{
+//     border-radius: 5.25rem;
+// }
 
-.error-input{
-    background: transparent;
-    border:none;
-    color: red;
-}
+// input .mat-input-element {
+//     height: 50px;
+//     width: 250px;
+// }
 
-@include media-breakpoint-up(xl) {
-    .card{
-        height: 100%;
-        width: 100%;
-    }      
-}
+// .error-input{
+//     background: transparent;
+//     border:none;
+//     color: red;
+// }
+
+// @include media-breakpoint-up(xl) {
+//     .card{
+//         height: 100%;
+//         width: 100%;
+//     }      
+// }
