--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid inside-frame">
     <div class="row" style="height:100%">
-        <div class="col mx-auto">
+        <div class="col mx-auto register-container">
             <div class="card">
-                <div class="card-body d-flex flex-column">
+                <div class="card-body d-flex flex-column align-items-center">
+                    <h3>Sign up to the site</h3>
                     <form [formGroup]="signUpForm">
                         <div class="form-group">
                             <input type="text" formControlName="username" name="username" class="form-control"
