--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,27 +1,28 @@
-@import '../../../variables';
-@import '../../../mixins';
-@import "../../../../node_modules/bootstrap/scss/bootstrap";
+@import '../../../forms'
+// @import '../../../variables';
+// @import '../../../mixins';
+// @import "../../../../node_modules/bootstrap/scss/bootstrap";
 
-.mat-stepper-vertical {
-    background-color: transparent !important;
-}
+// .mat-stepper-vertical {
+//     background-color: transparent !important;
+// }
 
-.card{
-    height: 360px;
-    width: 335px;
-    background: transparent;
-    border: none;
-}
+// .card{
+//     height: 360px;
+//     width: 335px;
+//     background: transparent;
+//     border: none;
+// }
 
-.error-input{
-    background: transparent;
-    border:none;
-    color: red;
-}
+// .error-input{
+//     background: transparent;
+//     border:none;
+//     color: red;
+// }
 
-@include media-breakpoint-up(xl) {
-    .card{
-        height: 100%;
-        width: 100%;
-    }
-}
+// @include media-breakpoint-up(xl) {
+//     .card{
+//         height: 100%;
+//         width: 100%;
+//     }
+// }
