--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,79 +1,1 @@
-//VARIABLES
-@import '../../../variables';
-@import '../../../../node_modules/bootstrap/scss/bootstrap.scss';
-
-.section-menu {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-
-    h1 {
-        text-align: center;
-    }
-
-    .menu {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        width: 50%;
-    }
-
-    button {
-        background-color: $dark-garnet;
-        color: $white;
-        height: 30px;
-        border-radius: 1vh;
-    }
-
-    .img-card {
-        display: flex;
-        justify-content: center;
-        margin-bottom: -3vh;
-
-        .mat-card-image {
-            width: 100px;
-            height: 100px;
-            margin: 30px;
-        }
-    }
-
-}
-
-@media (min-width: 800px) {
-    .section-menu {
-
-        .menu {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            align-items: center;
-
-            button {
-                width: 55%;
-                height: 35px;
-                border-radius: 1vh;
-                background: $white;
-                color: $black;
-                transform: translateY(0);
-                transition: all 0.2s ease;
-                border: 2px solid transparent;
-
-                &:hover{
-                    background: rgb(235, 235, 235);
-                    border: 2px solid $white
-                }
-                &:active{
-                    transform: translateY(2px);
-                }
-            }
-        }
-
-        .img-card{
-            .mat-card-image{
-                margin: 0px 0px 30px 0px;
-            }
-        }
-    }
-
-}
+@import '../../../menu';
