--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -14,7 +14,7 @@
             <button class="btn btn-secondary" [routerLink]="['/menu-game',userID]">Back</button>
         </ng-container>
         <ng-container *ngIf="!userLogged">
-            <button class="btn btn-secondary" routerLink="/">Back</button>
+            <button class="btn btn-secondary" routerLink="">Back</button>
         </ng-container>
     </div>
 
