--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                         </div>
 
                         <div class="d-flex justify-content-between">
-                            <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
+                            <input type="button" class="btn btn-secondary" value="Back" routerLink="" />
                             <input type="submit" class="btn btn-primary" value="Log in" (click)="logIn(logInForm.value)"/>
                         </div>
                     </form>
