--- a/src/app/components/options/options.component.html
+++ b/src/app/components/options/options.component.html
@@ -20,7 +20,7 @@
                     <button class="btn btn-secondary" (click)="goTo()">Back</button>
                 </ng-container>
                 <ng-container *ngIf="!userLogged">
-                    <button class="btn btn-secondary" routerLink="/">Back</button>
+                    <button class="btn btn-secondary" routerLink="">Back</button>
                 </ng-container>
             </div>
         </div>
