--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -27,7 +27,7 @@
                                 placeholder="Avatar" required autofocus />
                         </div>
                         <div class="d-flex justify-content-between">
-                            <input type="button" class="btn btn-secondary" value="Back" routerLink="/" />
+                            <input type="button" class="btn btn-secondary" value="Back" routerLink="" />
                             <input type="submit" class="btn btn-primary" value="Sign up" (click)="signUp(signUpForm.value)"/>
                         </div>
                     </form>
